@@ -1,8 +1,10 @@
 Документация
 ------------
 
+* Написать, как защищать админку
 * Добавить про restart stream API
 * Добавить про новую раскладку логов
+* В troubleshooting написать про то, что log/console/erlang.log работает раньше
 * Добавить про новый timeshift
 * Пароль на публикацию по RTMP один на префикс
 * Добавить про flv publish??
@@ -14,15 +16,11 @@
 Фичи
 ----
 
-* Валидация конфига. Не релоадиться если он битый
-* Валидация нескольких стримов в конфиге. Не загружать, если есть дубликаты или брать первый.
-
+* Периодический перезапрос авторизации на открытых персистентных сессиях
 
 
 Архив
 -----
-
-* добавить монотонизацию приходящего MPEG-TS
 
 * упаковывать MPEG-2
 
