@@ -1,0 +1,121 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Flussonic server</title>
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/base.css" />
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/themes/default/style.css" />
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/override.css"/>
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/calendar.css"/>
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/archive.css"/>
+	<link rel="stylesheet" type="text/css" href="/flu/stylesheets/smoothness/jquery-ui-1.8.14.custom.css" />	
+  <link rel="stylesheet" type="text/css" href="/flu/stylesheets/visualize.css"/>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/swfobject.js"></script>
+	<script type="text/javascript" src="/flu/js/jquery-1.5.1.min.js"></script>
+	<script type="text/javascript" src="/flu/js/jquery-ui-1.8.14.custom.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/library.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/cal.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/application.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/mustache.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/archive.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/flu/js/visualize.jQuery.js"></script>
+
+
+</head>
+<body>
+  <div id="container">
+    <div id="header">
+      <h1><a href="index.html">Flussonic <span id="flu_version"></span> admin panel</a></h1>
+    </div>
+    <div id="wrapper" class="wat-cf">
+      <div id="main">
+
+				<!--
+				<form action="/upload" enctype="multipart/form-data" method="post">
+					<input type="file" name="file">
+					<input type="submit" value="upload">
+				</form>
+				-->
+
+        <div class="block">
+          <div class="secondary-navigation">
+            <ul class="wat-cf tabbed-menu">
+              <li class="first active"><a href="#streams">Streams</a></li>
+              <!-- <li><a href="#license">Licensed code</a></li> -->
+              <li><a href="#pulse">Statistics</a></li>
+              <li><a href="#play">Play</a></li>
+							<li><a href="/flu/docs/index.html">Documentation</a></li>
+            </ul>
+          </div>
+          <div class="content" id="streams-tab">
+            <h2 class="title">Streams</h2>
+						
+            <div class="inner">
+              <p id="stream-info"></p>
+              <table class='table'>
+                <thead><tr><th class='first' style='width: 120px'>Name</th><th>Play</th><th width='65'>Clients</th>
+                <th width='75'>Lifetime</th><th width='65'>DTS Delay</th><th width='70'>Retry count</th></tr></thead>
+                <tbody id="stream-list">
+                </tbody>
+              </table>
+            </div>
+						
+						<p>
+							<input type="text" id="dvr-name-input" name="dvr-name-input"/>
+							<button onclick='$("#dvr-list").showDVR($("#dvr-name-input").val(), {}); return false;'>Show DVR</button>
+						</p>
+						<div id="dvr-list">
+						</div>
+          </div>
+
+          <div class="content" id="pulse-tab" style="display: none">
+            <h2 class="title">Statistics</h2>
+            <div class="inner visualised" id="pulse-stats">
+            </div>
+          </div>
+
+          <div class="content" id="play-tab" style="display: none">
+            <h2 class="title">Play any stream</h2>
+            <div class="inner">
+              <form action="#" method="get" class="form">
+                <div class="group">
+                  <label class="label">Enter stream name</label>
+                  <input type="text" class="text_field" id="requested-stream-name" />
+                  <span class="description">Ex: vod/video.mp4</span>
+                </div>
+                <div class="group navform wat-cf">
+                  <button class="button" type="submit" name="type" value="hls">
+                    <img src="/flu/images/icons/tick.png" alt="HLS" /> HLS
+                  </button>
+                  <button class="button" type="submit" name="type" value="hds">
+                    <img src="/flu/images/icons/tick.png" alt="HDS" /> HDS
+                  </button>
+                  <button class="button" type="submit" name="type" value="rtmp">
+                    <img src="/flu/images/icons/tick.png" alt="RTMP" /> RTMP
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+
+        </div>
+
+        <div id="footer">
+          <div class="block">
+            <p>Copyright &copy; 2010-2013 <a href="mailto:info@erlyvideo.org">Max Lapshin</a>, Flussonic.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+		<div id="box">
+      <div class="block" id="block-login">
+        <div class="content login">
+					<div id="player-embed"></div>
+        </div>
+      </div>
+		</div>
+  </div>
+</body>
+</html>
+
