@@ -1,3 +1,10 @@
+flussonic (3.66.3)
+
+  * Added disk index to archive files for fast load
+  * Admin page now can be protected with password
+  * Reconfigure doesn't stop HTTP acceptor anymore
+  * Proper handling of invalid config: better log on start and refuse to reconfigure
+
 flussonic (3.66.2)
 
   * Mpegts handler disconnects old connection with same user_id. EV:25120
